# csc746_high_performance_computing

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench.sh  benchmark.cpp  devenv.nix  dgemm-basic-omp.cpp  dgemm-basic.cpp  dgemm-blas.cpp  dgemm-blocked-omp.cpp  dgemm-blocked.cpp  dgemv-basic.cpp  dgemv-blas.cpp  dgemv-openmp.cpp  dgemv-vectorized.cpp  extract.sh  job-cpu  job-gpu  job-gpu-offload  job-performance-test  job-rt  job-rt-gpu  job-rt-likwid  job-scence-complexity  job-weak  job.in  mpi_2dmesh.cpp  mpi_2dmesh.cpp-save  mpi_2dmesh.hpp  plot.py  remote-bench.sh  remote-build.sh  remote-test.sh  sobel_cpu.cpp  sobel_cpu_omp_offload.cpp  sobel_gpu.cu  sum_direct.cpp  sum_indirect.cpp  sum_vector.cpp  (+1 more)
cp1-sum-performance-study/: CMakeLists.txt  plot_3vars.py  plot_3vars_savefig.py  sum_direct.cpp
cp1-sum-performance-study/Sum Performance Analysis Assignment 1, CSC 746, Fall 2024/: 00_main.tex  01_introduction.tex  03_implementation.tex  04_evaluation.tex  template.bib
cp1-sum-performance-study/data/: Bandwidth_O0.csv  Elapsed_Time_O0.csv  Latency_O3.csv  MFLOPs_O0.csv  MFLOPs_O3.csv
cp2-mmul-performance-study/: benchmark.cpp  dgemm-basic.cpp  dgemm-blocked.cpp  plot.py
cp2-mmul-performance-study/Matrix Multiplication Optimization Study Assignment 2, CSC 746, Fall 2024/: 00_main.tex  01_introduction.tex  02_relatedWork.tex  03_implementation.tex  04_evaluation.tex  06_appendix.tex  template.bib
cp3-vmul/Vector Matrix Multiplication Study Assignment 3, CSC 746, Fall 2024/: 00_main.tex  01_introduction.tex  02_implementation.tex  03_results.tex  template.bib
cp3-vmul/omp_playground/: .gitignore  Makefile  critical_region.c  critical_region_sequential.c  loop_reduction.c  serial_sum.c
cp4-mmul-omp/: .gitignore  dgemm-blas.cpp  dgemm-blocked-omp.cpp  job.in  plot.py  remote-test.sh
cp4-mmul-omp/Parallel MMUL and LIKWID Performance Conters Assignment 4, CSC 746, Fall 2024/: 00_1_abstract.tex  00_main.tex  01_1_introduction.tex  01_introduction.tex  02_1_implementation.tex  02_2_basic.tex  02_3_blas.tex  02_4_block.tex  02_implementation.tex  03_1_results.tex  03_2_environments.tex  03_3_methodology.tex  03_4_basic_omp.tex  03_5_bmmco_omp.tex  03_6_comparison_cblas.tex  03_7_overall_findings.tex  03_results.tex  template.bib
cp4-mmul-omp/log/: 20241023102800_2aa5d55_32105470_job-speedup.e  job-basic-omp.o.1c002bd.32051108  job-blas.o.1c002bd.32051107  (+3 more)
cp5-gpu-stencil/: README.md  sobel_cpu.cpp
cp6-mpi-2dmesh/: CMakeLists.txt  intro_mpi  job-debug  job-performance-test  mpi_2dmesh.cpp
cp6-mpi-2dmesh/Distributed-memory stencil operations with MPI Assignment 6, CSC 746, Fall 2024/: 00_1_abstract.tex  00_main.tex  01_1_introduction.tex  02_1_implementation.tex  02_2_overall-code-harness.tex  02_3_decomposition-strategies.tex  02_4_processing-halo.tex  02_5_send-and-receive-strided-buffer.tex  02_6_sobel-implementation.tex  02_implementation.tex  03_1_results.tex  03_2_environments.tex  03_3_methodology.tex  03_4_runtime-performance-study.tex  03_5_data-movement-performance-study.tex  03_6_overall-findings.tex  03_results.tex  template.bib
cp6-mpi-2dmesh/log/: job-debug.e33130516  job-debug.o32940769  job-debug.o32941985  job-debug.o32942275  job-debug.o32956629  job-debug.o33130516  job-performance-test.e33128189  job-performance-test.o32956634  job-performance-test.o33128189  job-performance-test.o33133938
cp6-mpi-2dmesh/scripts/: floatshow.py  imshow.py  run_script_overrun.sh
data/: Bandwidth_O3.csv  Elapsed_Time_O3.csv  Latency_O0.csv  performance.csv  scene-complexity.csv
images/: image10.ppm  image12.ppm  image13.ppm  image14.ppm  image16.ppm  image17-schlick.ppm  image17.ppm  image18.ppm  image19.ppm  image20.ppm  image21.ppm  image22.ppm  image7.ppm  image9.ppm
jobs/: job-scence-complexity  job-weak
log/: job-basic-omp.o.93930e2.31909244  job-blocked-omp.o.1c002bd.32051109  job-cpu.o32634069  job-cpu.o32634700  job-gpu-offload.o32436435  job-gpu-offload.o32636778  job-gpu-offload.o32638287  job-gpu.o32596715  job-gpu.o32597278  job-gpu.o32597906  job-gpu.o32598054  job-gpu.o32598206  job-gpu.o32599827  job-l2.o.2f77fab.32062357  job-l2.o.2f77fab.32067970  job-l3.o.2f77fab.32062358  job-l3.o.2f77fab.32071172  job-l3.o.f6fe387.32061488
scripts/: parse.py  plot.py  run_script.sh
src/: aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  likwid-stuff.h  main.cpp  material.h  rtweekend.h  sphere.h  vec3.h
tp-ray-tracing-in-parallel/: CMakeLists.txt  LICENSE  README.md
(+57 files in other folders)
